modified the width of the nav link list to prevent it from goruping too much before activating the burger menu

--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 40%;
+  min-width: 45%;
 }
 
 .nav__list--item {
